Whole Project, After adding profile

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SmartLoginPage</title>
+  <link rel="shortcut icon" href="./images/user.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -16,7 +17,7 @@
 </head>
 <body>
   
-<section id="signUp">
+<section id="signIn">
   <div class="container d-flex justify-content-center my-5">
     <div class="wholeDiv  d-flex flex-column justify-content-center align-items-center border-4 border-black">
       <h1 class="pt-5">
