--- a/signup.html
+++ b/signup.html
@@ -5,10 +5,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=Pacifico&family=Righteous&display=swap" rel="stylesheet">
-  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>SmartSignupPage</title>
+  <link rel="shortcut icon" href="./images/user.png" type="image/x-icon">
+
   <link rel="stylesheet" href="./css/all.min.css">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/signup.css">
@@ -38,7 +39,7 @@
       <div class="formButton py-2">
         <button id="signUpButton" class="btn w-100" >Sign Up</button>
       </div>
-      <p class="text-white pt-2 pb-5">You have an account?<a id="aLink" class="text-white" href="#">Signin</a></p>
+      <p class="text-white pt-2 pb-5">You have an account? <a id="aLink" class="text-white" href="#">Signin</a></p>
       
     </div>
   </div>
